# ai_agency_pipeline

./: .gitignore  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt  streamlit_app.py
src/: data_loader.py  model.py  utils.py
